# borg-ui

./: .coveragerc  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Borg_UI_API.postman_collection.json  Borgmatic_UI_API.postman_collection.json  CACHE_LOCK_TEST_GUIDE.md  CLAUDE.md  DEPLOYMENT_PATTERNS.md  DESIGN.md  Dockerfile  Dockerfile.dev  Dockerfile.dev.amd64  Dockerfile.pi-optimized  Dockerfile.runtime-base  IMPLEMENTATION_TASKS.md  INSTALL.md  INSTALL_RASPBERRY_PI.md  LICENSE  OPTIMIZATION_TASKS.md  PI_BUILD_STATUS.md  PRODUCT.md  QUICK_START_COMPARISON.md  README.md  RELEASE_NOTES_v1.6.0.md  REMOTE_BACKUP_IMPLEMENTATION.md  SCRIPT_MANAGEMENT_IMPLEMENTATION.md  SECURITY.md  SESSION_SUMMARY.md  SYSTEM_DESIGN.md  TASK_1.6_IMPLEMENTATION_GUIDE.md  TESTING.md  TEST_GAP_ANALYSIS.md  TEST_RESULTS.md  VERSION  VERSIONING.md  VOLUME_MANAGEMENT.md  (+18 more)
.beads/: last-touched
.claude/: instructions.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT_NOTICE.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
agent/: README.md
ansible/: CHANGELOG.rst  README.md  galaxy.yml
app/: config.py  main.py
config/: borgmatic.yaml
docker/: runtime-base.env
docs-vitepress/: analytics.md  beta-features.md  cache.md  configuration.md  contributing.md  development.md  docker-hooks.md  index.md  installation.md  licensing.md  metrics.md  mounting.md  notifications.md  package-lock.json  package.json  reverse-proxy.md  script-parameters.md  (+5 more)
(+1732 files in other folders)
